@@ -1,7 +1,7 @@
 {
     "name": "OVN_Northbound",
-    "version": "5.21.0",
-    "cksum": "2487421114 25310",
+    "version": "5.22.0",
+    "cksum": "384164739 25476",
     "tables": {
         "NB_Global": {
             "columns": {
@@ -342,6 +342,9 @@
                 "ipv6_ra_configs": {
                     "type": {"key": "string", "value": "string",
                              "min": 0, "max": "unlimited"}},
+                "ipv6_prefix": {"type": {"key": "string",
+                                      "min": 0,
+                                      "max": "unlimited"}},
                 "external_ids": {
                     "type": {"key": "string", "value": "string",
                              "min": 0, "max": "unlimited"}}},
