@@ -11,6 +11,7 @@ OVN v20.03.0 - xx xxx xxxx
    - Added Forwarding Group support in OVN.
    - Added support for MLD Snooping and MLD Querier.
    - Added support for ECMP routes in OVN router.
+   - Added IPv6 Prefix Delegation support in OVN.
 
    - OVN Interconnection:
      * Support for L3 interconnection of multiple OVN deployments with tunnels
